--- a/.github/workflows/publish-docker-image.yml
+++ b/.github/workflows/publish-docker-image.yml
@@ -3,8 +3,8 @@ name: Create and publish a Docker image
 
 on:
   workflow_dispatch:
-  release:
-    types: [ created ]
+  push:
+    branches: ['main']
 
 env:
   REGISTRY: ghcr.io
