--- a/.github/workflows/publish-docker-image.yml
+++ b/.github/workflows/publish-docker-image.yml
@@ -3,8 +3,8 @@ name: Create and publish a Docker image
 
 on:
   workflow_dispatch:
-  push:
-    branches: ['main']
+  release:
+    types: [ created ]
 
 env:
   REGISTRY: ghcr.io
